log
ma., 13 de may. de 2025 23:26:44: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
3f0e54c
ma., 13 de may. de 2025 23:28:09: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
b3ae18d
ma., 13 de may. de 2025 23:29:18: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
18a1492
ma., 13 de may. de 2025 23:29:39: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
02040d9
ma., 13 de may. de 2025 23:30:16: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
787cdb6
Wed, May 14, 2025  8:34:45 AM: 
 sudoku.c | 43 ++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 42 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ece17ce
ju., 15 de may. de 2025 17:42:31: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
a2693bb
ju., 15 de may. de 2025 17:43:14: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
2d6001a
ju., 15 de may. de 2025 17:48:52: 
 sudoku.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
de5f77a
ju., 15 de may. de 2025 17:49:37: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
250f674
vi., 16 de may. de 2025 18:30:52: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
59f0606
vi., 16 de may. de 2025 18:32:21: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
f3b27e4
vi., 16 de may. de 2025 18:33:59: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1615f67
sá., 17 de may. de 2025 14:32:04: 
 sudoku.c | 40 +++++++++++++++++++---------------------
 1 file changed, 19 insertions(+), 21 deletions(-)
 tests:  0|5
total_score: 0/70
f9ac164
sá., 17 de may. de 2025 14:33:32: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
653823c
sá., 17 de may. de 2025 14:34:04: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|3
total_score: 35/70
a85df68
sá., 17 de may. de 2025 14:36:23: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
f451414
sá., 17 de may. de 2025 14:37:48: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
fd4187b
sá., 17 de may. de 2025 14:42:14: 
 sudoku.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'j' [-Werror=unused-variable]
     int i,k,j;
             ^
cc1.exe: all warnings being treated as errors
a581ce9
sá., 17 de may. de 2025 14:42:28: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
51357ec
sá., 17 de may. de 2025 14:43:08: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
8761ae1
sá., 17 de may. de 2025 14:49:06: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
ea9503a
sá., 17 de may. de 2025 15:04:11: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:132:19: error: implicit declaration of function 'nex' [-Werror=implicit-function-declaration]
             aux = nex(adyacentes);
                   ^~~
sudoku.c:132:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
             aux = nex(adyacentes);
                 ^
cc1.exe: all warnings being treated as errors
a057489
sá., 17 de may. de 2025 15:04:22: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
e9cb653
sá., 17 de may. de 2025 15:04:45: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
bdf1ae5
sá., 17 de may. de 2025 15:06:29: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
3e7ab39
